# Cybersecurity-Tools-Basic

01_Keylogger_Python/: Keylogger.py
08_Fernet_Cryptography/: CMakeLists.txt  Fernet_Cryptography.cpp  README.md
